030-software/fluxcd/apps/vpn-egress-gateway/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vpn-egress-gateway
  labels:
    pod-security.kubernetes.io/enforce: privileged
    pod-security.kubernetes.io/audit: privileged
    pod-security.kubernetes.io/warn: privileged
