030-software/fluxcd/apps/vpn-egress-gateway/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-egress-gateway
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: vpn-egress-gateway
  template:
    metadata:
      labels:
        app: vpn-egress-gateway
        policy.gatekeeper.sh/ignore: "true"
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      automountServiceAccountToken: false
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: vpn-egress-gateway
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: vpn-egress-gateway
      containers:
        - name: gateway
          image: ghcr.io/shokohsc/gateway:3c96fd6@sha256:3ee97fdca6c6c9fb02297a4f25bd33d2538a0bdb949f19d9b0f9ed7030bafa62
          securityContext:
            privileged: true
          ports:
            # - name: vxlan
            #   containerPort: 8472
            #   protocol: UDP
            - name: cilium
              containerPort: 4789
              protocol: UDP
          startupProbe:
            exec:
              command:
                - ip
                - a
                - s
                - tun0
          readinessProbe:
            exec:
              command:
                - ip
                - a
                - s
                - tun0
          livenessProbe:
            exec:
              command:
                - nc
                - -zv
                - google.com
                - "443"
          volumeMounts:
            - name: openvpn
              mountPath: /etc/openvpn
            - name: tun-device
              mountPath: /dev/net
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 100m
      volumes:
        - name: openvpn
          emptyDir: {}
        - name: tun-device
          hostPath:
            path: /dev/net
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vpn-egress-webhook
spec:
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: vpn-egress-webhook
  template:
    metadata:
      labels:
        app: vpn-egress-webhook
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                topologyKey: kubernetes.io/hostname
                labelSelector:
                  matchLabels:
                    app: vpn-egress-webhook
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: vpn-egress-webhook
      containers:
        - name: webhook
          image: ghcr.io/shokohsc/vpn-egress-gateway:3c96fd6@sha256:dbb2edaa25ed8c822f6e1ed68502c90812be524d148b297eebcfba3fd242325b
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 8443
              name: https
            - containerPort: 8080
              name: healthz
          startupProbe:
            tcpSocket:
              port: healthz
          livenessProbe:
            tcpSocket:
              port: healthz
          readinessProbe:
            httpGet:
              path: /readyz
              port: healthz
          resources:
            limits:
              memory: 64Mi
            requests:
              cpu: 100m
          volumeMounts:
            - name: webhook-tls
              mountPath: /etc/webhook/tls
              readOnly: true
      volumes:
        - name: webhook-tls
          secret:
            secretName: vpn-egress-gateway-webhook-tls
