030-software/fluxcd/apps/vpn-egress-gateway/cilium-network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vpn-egress-gateway
  namespace: vpn-egress-gateway
spec:
  endpointSelector:
    matchLabels:
      app: vpn-egress-gateway
  egress:
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app: deluge
            io.kubernetes.pod.namespace: deluge
      toPorts:
        - ports:
            - port: "4789"
    - toEndpoints:
        - matchLabels:
            app: api
            io.kubernetes.pod.namespace: sidekick
      toPorts:
        - ports:
            - port: "3000"
    - toEntities:
        - world
